# earclip-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: earcut.rs  lib.rs  traits.rs  types.rs
src/tests/: earclip.rs  earcut.rs  mod.rs
